deployment/laravel-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: laravel
  name: laravel
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: laravel
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/clrlaraveldocker_laravel-network: "true"
        io.kompose.service: laravel
    spec:
      containers:
      - args:
        - php-fpm
        image: laravel
        imagePullPolicy: ""
        name: laravel
        resources: {}
        volumeMounts:
        - mountPath: /var/www/html
          name: laravel-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: laravel-claim0
        persistentVolumeClaim:
          claimName: laravel-claim0
status: {}
