deployment/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/clrlaraveldocker_laravel-network: "true"
        io.kompose.service: nginx
    spec:
      containers:
      - image: clearlinux/nginx:latest
        imagePullPolicy: ""
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - mountPath: /var/www/html
          name: nginx-claim0
        - mountPath: /etc/nginx/conf.d/default.conf
          name: nginx-claim1
        - mountPath: /var/log/nginx
          name: nginx-claim2
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: nginx-claim0
        persistentVolumeClaim:
          claimName: nginx-claim0
      - name: nginx-claim1
        persistentVolumeClaim:
          claimName: nginx-claim1
      - name: nginx-claim2
        persistentVolumeClaim:
          claimName: nginx-claim2
status: {}
