deployment/clrlaraveldocker_laravel-network-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: clrlaraveldocker_laravel-network
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/clrlaraveldocker_laravel-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/clrlaraveldocker_laravel-network: "true"
